--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,13 @@ regex = "1.11.0"
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
 embedded-hal = "1.0.0"
+embedded-alloc = "0.6"
 defmt = "1"
 defmt-rtt = "1"
 heapless = "0.8"
 nb = "1"
+scanner = { git = "https://github.com/jig/scanner-rust" }
+mal = { git = "https://github.com/jig/lisp-rust" }
 
 [target.'cfg( target_arch = "arm" )'.dependencies]
 panic-probe = { version = "1", features = ["print-defmt"] }
