--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ defmt-rtt = "1"
 heapless = "0.8"
 nb = "1"
 scanner = { git = "https://github.com/jig/scanner-rust" }
-mal = { git = "https://github.com/jig/lisp-rust" }
+mal = { git = "https://github.com/jig/lisp-rust", tag = "v0.1.2" }
 
 [target.'cfg( target_arch = "arm" )'.dependencies]
 panic-probe = { version = "1", features = ["print-defmt"] }
