--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -11,7 +11,7 @@
 #
 
 [build]
-target = "thumbv8m.main-none-eabihf"
+target = "thumbv6m-none-eabi"
 # Set the default target to match the Cortex-M33 in the RP2350
 # target = "thumbv8m.main-none-eabihf"
 # target = "thumbv6m-none-eabi"
