--- a/openocd.cfg
+++ b/openocd.cfg
@@ -6,3 +6,12 @@ source [find target/rp2040.cfg]
 
 # Set adapter speed (in kHz)
 adapter speed 5000
+
+# RTT configuration - must be after init
+rp2040.core0 configure -event reset-init {
+    # RTT control block is in RAM at 0x20000000 with 0x42000 bytes search range
+    rtt setup 0x20000000 0x42000 "SEGGER RTT"
+    rtt start
+    rtt server start 9090 0
+    rtt polling_interval 10
+}
